--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Xero-Bots</title>
+  <link rel="icon" href="https://xerobots.github.io/Xero.png" type="image/png" />
   <style>
     /* Reset and basic styling */
     * {
